--- a/top.html
+++ b/top.html
@@ -1,11 +1,11 @@
-	<link href="/~atgupta/styles.css" type="text/css" rel="stylesheet"/>
+	<link href="/styles.css" type="text/css" rel="stylesheet"/>
 	<div id="header">
         	<table style="margin-left: auto; margin-right: auto; width: 90%;">
         		<tbody>
         			<tr>
         				<td>
-        					<a  title="Arya Tanmay Gupta" href="/~atgupta/">
-                					<img src="/~atgupta/arya.png" id="headerImage" style="height: 132px; width: 132px">
+        					<a  title="Arya Tanmay Gupta" href="/index.html">
+                					<img src="/arya.png" id="headerImage" style="height: 132px; width: 132px">
             					</a>
 					</td>
             				<td>
@@ -26,22 +26,22 @@
         <div id="nav">
         	<ul>
                 	<li>
-                		<a href="/~atgupta/">Home</a>
+                		<a href="/index.html">Home</a>
                 	</li>
 			<li>
-                		<a href="/~atgupta/articles.html">Articles</a>
+                		<a href="/articles.html">Articles</a>
                 	</li>
 			<li>
-               			<a href="/~atgupta/teaching.html">Teaching</a>
+               			<a href="/teaching.html">Teaching</a>
 			</li>
 			<li>
-               			<a href="/~atgupta/non-teaching.html">Non-Teaching Assignments</a>
+               			<a href="/non-teaching.html">Non-Teaching Assignments</a>
 			</li>
 			<li>
-               			<a href="/~atgupta/projects.html">Projects</a>
+               			<a href="/projects.html">Projects</a>
 			</li>
 			<li>
-               			<a href="/~atgupta/contact.html">Contact Me</a>
+               			<a href="/contact.html">Contact Me</a>
 			</li>
         	</ul>
         </div>
