--- a/top.html
+++ b/top.html
@@ -15,7 +15,7 @@
 					</td>
 					<td>
 						<a  title="MSU" href="https://msu.edu">
-							<img src="/~atgupta/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+							<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
 						</a>
 					</td>
 				</tr>
