--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<link rel="shortcut icon" href="/favicon.png"/>
 	<div id="head"></div>
 </head>
 <body>
