--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<link rel="shortcut icon" href="/favicon.png"/>
 	<div id="head"></div>
 </head>
 <body>
@@ -25,7 +25,7 @@
 <br>&emsp; &emsp; East Lansing, Michigan - 48824 (USA)
 <br>
 <p>Social Media: <a title="Linkedin" href="https://www.linkedin.com/in/aryatanmaygupta/" target="_blank">
-    		<img style="height: 17px" src="/~atgupta/Linkedin">
+    		<img style="height: 17px" src="/Linkedin">
     	</a>
 
 </body>
